# ollama-joker

./: pyproject.toml
backend/: .env  Dockerfile  docker-compose.yml  requirements.txt
backend/app/: main.py
backend/app/api/: jokes.py
backend/app/services/: generator.py
